# gclpr

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  CMakeLists.txt  README.md  Taskfile.yaml  build-all.sh  build-release.sh  gclpr.go  go.mod  go.sum
.github/workflows/: release.yml
.opencode/: AGENTS.md  go-best-practices.md
cmake/: gclpr.json.in  gui.rc.in  gui.xml.in  pre-push  scoophash.sh  sign.sh
cmd/cli/: debug_env.go  main_cli.go  main_cli_test.go  oauth_detach_unix.go  oauth_detach_windows.go  oauth_targets.go  oauth_worker.go  oauth_worker_test.go  tunnel_client.go  tunnel_targets.go
cmd/gui/: main_gui.go  session_windows.go
server/: clipboard.go  helpers.go  helpers_test.go  server.go  server_test.go  tunnel.go  tunnel_test.go  tunnel_transport.go  tunnel_transport_test.go  uri.go  uri_test.go
systray/: systray.go  systray_windows.go
util/: files_test.go  files_unix.go  files_unix_test.go  files_windows.go  frame.go  frame_test.go  keys.go  keys_test.go  log_unix.go  log_windows.go  mbox_windows.go  util_test.go
